src/test/ui/const-generics/min_const_generics/complex-types.stderr
error: using `[u8; 0]` as const generic parameters is forbidden
  --> $DIR/complex-types.rs:3:21
   |
LL | struct Foo<const N: [u8; 0]>;
   |                     ^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `()` as const generic parameters is forbidden
  --> $DIR/complex-types.rs:6:21
   |
LL | struct Bar<const N: ()>;
   |                     ^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `No` as const generic parameters is forbidden
  --> $DIR/complex-types.rs:12:21
   |
LL | struct Fez<const N: No>;
   |                     ^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: using `&'static u8` as const generic parameters is forbidden
  --> $DIR/complex-types.rs:15:21
   |
LL | struct Faz<const N: &'static u8>;
   |                     ^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 4 previous errors

